--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -11,7 +11,7 @@
 } /*max-width:1440px*/
 
 @media screen and (max-width: 1199px) {
-	nav.navbar.bootsnav ul.nav > li > a {
+	nav.navbar.brand ul.nav > li > a {
 		padding: 35px 8px;
 	}
 
@@ -29,12 +29,12 @@
 } /*max-width:1024px*/
 
 @media screen and (max-width: 1008px) {
-	nav.navbar.bootsnav ul.nav > li.dropdown span.megamenu-title {
+	nav.navbar.brand ul.nav > li.dropdown span.megamenu-title {
 		display: block;
 		color: #43465d;
 		font-size: 18px;
 	}
-	nav.navbar.bootsnav
+	nav.navbar.brand
 		ul.dropdown-menu.megamenu-content
 		.content
 		ul.menu-col
@@ -44,7 +44,7 @@
 		margin-top: 20px;
 		font-size: 14px;
 	}
-	nav.navbar.bootsnav
+	nav.navbar.brand
 		ul.dropdown-menu.megamenu-content
 		.content
 		ul.menu-col
@@ -56,19 +56,19 @@
 } /*max-width:1008px*/
 
 @media screen and (max-width: 992px) {
-	nav.navbar.bootsnav .navbar-collapse.collapse.in {
+	nav.navbar.brand .navbar-collapse.collapse.in {
 		padding-bottom: 30px;
 	}
-	nav.navbar.bootsnav .navbar-toggle {
+	nav.navbar.brand .navbar-toggle {
 		display: inline-block;
 		float: right;
 		margin-right: 0;
 		margin-top: 21px;
 	}
-	nav.navbar.bootsnav .navbar-brand {
+	nav.navbar.brand .navbar-brand {
 		float: left !important;
 	}
-	nav.navbar.bootsnav ul.nav > li > a {
+	nav.navbar.brand ul.nav > li > a {
 		padding: 15px 0px;
 		border: transparent;
 	}
