--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,17 +283,17 @@ nav.navbar.brand .navbar-toggle i {
 
 .navbar .navbar-brand b {
   font-weight: bold;
-  color: #eb5844;
+  color: #d92cf9;
 }
 
 .navbar .navbar-nav a:hover,
 .navbar .navbar-nav a:focus {
-  color: #f08373 !important;
+  color: #efaafc !important;
 }
 
 .navbar .navbar-nav a.active,
 .navbar .navbar-nav a.active:hover {
-  color: #eb5844 !important;
+  color: #d92cf9 !important;
   background: transparent !important;
 }
 
@@ -310,7 +310,7 @@ nav.navbar.brand .navbar-toggle i {
 }
 
 .search-box input.form-control:focus {
-  border-color: #f08373;
+  border-color: #efaafc;
 }
 
 .search-box .input-group-text {
@@ -577,15 +577,6 @@ p.welcome-txt {
   padding-top: 50px;
 }
 
-.education-horizontal-timeline {
-  padding: 80px 0;
-}
-
-/*.education-horizontal-timeline*/
-.education-horizontal-timeline .col-sm-4 {
-  padding: 0 2px;
-}
-
 .single-horizontal-timeline .experience-time h3 {
   text-transform: capitalize;
 }
@@ -625,6 +616,86 @@ span.single-timeline-horizontal {
 
 span.single-timeline-horizontal.spacial-horizontal-line {
   width: 88px;
+}
+
+.timeline-1 {
+  border-left: 3px solid #b565a7;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  background: rgba(177, 99, 163, 0.09);
+  margin: 0 auto;
+  position: relative;
+  padding: 50px;
+  list-style: none;
+  text-align: left;
+  max-width: 40%;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 {
+    max-width: 98%;
+    padding: 25px;
+  }
+}
+
+.timeline-1 .event {
+  border-bottom: 1px dashed #000;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 .event {
+    padding-top: 30px;
+  }
+}
+
+.timeline-1 .event:last-of-type {
+  padding-bottom: 0;
+  margin-bottom: 0;
+  border: none;
+}
+
+.timeline-1 .event:before,
+.timeline-1 .event:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+
+.timeline-1 .event:before {
+  left: -207px;
+  content: attr(data-date);
+  text-align: right;
+  font-weight: 200;
+  font-size: 0.9em;
+  min-width: 120px;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 .event:before {
+    left: 0px;
+    text-align: left;
+  }
+}
+
+.timeline-1 .event:after {
+  -webkit-box-shadow: 0 0 0 3px #b565a7;
+  box-shadow: 0 0 0 3px #b565a7;
+  left: -55.8px;
+  background: #fff;
+  border-radius: 50%;
+  height: 9px;
+  width: 9px;
+  content: "";
+  top: 5px;
+}
+
+@media (max-width: 767px) {
+  .timeline-1 .event:after {
+    left: -31.8px;
+  }
 }
 
 /*.timeline-horizontal-border*/
